welcome.lessons.welcome.array.island.Island.scala.error
island:4: error: Int does not take parameters
    if (num(compteur(l))<num(compteur(l-1))){
                    ^island:4: error: Int does not take parameters
    if (num(compteur(l))<num(compteur(l-1))){
                                     ^island:3: error: type mismatch;
 found   : Unit
 required: Int
  for (compteur <-1 to num.length-1){
                ^